Make syntax Java 8 compatible